@@ -1,3 +1,11 @@
+2024-07-10  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll micro version and date
+
+	* src/ql/time/calendars/chile.{cpp,hpp}: Updated from QuantLib 1.35 (rc)
+	* src/ql/time/calendars/india.{cpp,hpp}: Idem
+	* src/ql/time/calendars/unitedstates.cpp: Idem
+
 2024-05-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Use tinyverse.netlify.app for dependency badge
